--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hola</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis assumenda eos unde incidunt consectetur earum dolor ullam nobis temporibus quia!</p>
     
 </body>
 </html>
